Many bug fixes: - autocomplete observable respects [minimumTextLength] - ripple only visible in chrome for better compatibility - adding item using dropdown respects transform - it's possible to add items while typing in the autocomplete (fix from ng2-material-dropdown) - clearOnBlur and addOnBlur disable focusFirstElement as they are not compatible together

--- a/modules/components/tag/_tag.style.scss
+++ b/modules/components/tag/_tag.style.scss
@@ -17,6 +17,7 @@ tag {
     cursor: pointer;
     border-radius: $tag-border-radius;
     transition: all 0.25s;
+    position: relative;
 
     margin: $tag-margin;
     padding: $tag-padding;
